[package]
name = "rustcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.0"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.4"
features = ['CanvasRenderingContext2d', 'ImageData']
